SG-2004-05-18-1: Bugfix:    fixed memory leak in qmaster.
                 Changed:   sge_qmaster
                 Review:    JG

SG-2004-05-18-0: Bugfix:    fixed memory leak in qmaster.
                 Changed:   sge_qmaster
                 Review:    JG

JG-2004-05-17-0: Bugfix:    Fixed a memory leak in qmaster.
                 Changed:   sge_qmaster
                 Review:    SG

AA-2004-05-17-0: Bugfix:    - AIX51 load, switch on incomplete AIX51 load code 
                              with aimk -DTEST_AIX51
                            - make broken on AIX43
                 IZ:        754
                 Changed:   sge_execd, load_check
                 Review:    CR
                 
SG-2004-05-14-0: Bugfix:    - fixed the messages generation for jobs, which
                              exceeded the user job limit.
                            - added copyright statements to the xml-schemas
                 Review:    RH, AH
                 Changed:   scheduler, XML schemas

DT-2004-05-14-2: Bugfix:    o Fixed core dump in event master
                 Changed:   EVM
                 Review:    pending

CR-2004-05-14-1: Bugfix:    Can't interrupt qacct -j with Ctrl-C
                 Issue:     981
                 Review:    AA
                 Changed:   qacct    

AH-2004-05-14-1: Bugfix:    qstat -j shows wrong message for parallel jobs 
                            which can't be dispatched
                            Partial fix.
                 Issue:     814
                 Review:    SG

JG-2004-05-14-1: Testsuite: test functional/migration was broken due to changed
                            qstat queue output.

AH-2004-05-14-0: Bugfix:    Change of consumable values takes long time until 
                            used by scheduler.
                 Issue:     1033
                 Review:    JG

JG-2004-05-14-0: Bugfix:    Fixed build dependencies for spooledit and japi 
                            howtos.
