@@ -622,7 +622,7 @@ while ($#argv >= 1 && $?found)
       #set DEBUG_FLAG = "$DEBUG_FLAG -g -Zsl -Zvm -Zvm -Zkt"
       #set DEBUG_FLAG = "$DEBUG_FLAG -g -Zsl"
       #set DEBUG_FLAG = "$DEBUG_FLAG -Zsl"
-      set INSURE_FLAG = "-Zsl -Zvm"
+      set INSURE_FLAG = "-D__SGE_INSURE__ -Zsl -Zvm"
       set LFLAGS     = "-Zsl $LFLAGS"
       set DEBUGGED   = 1
       breaksw
@@ -1362,7 +1362,7 @@ case SOLARIS86:
    endif
 
    if ( $DEBUGGED == 1 ) then
-      set DEBUG_FLAG = "-g"
+      set DEBUG_FLAG = "-g $INSURE_FLAG"
       set OFLAG = ""
    endif
 
