@@ -839,7 +839,7 @@ static lCondition *read_val(lDescr *dp, cull_parse_state *state, va_list *app)
    case CHAR:
       if (mt_get_type(cp->operand.cmp.mt) != lCharT)
          incompatibleType(MSG_CULL_WHERE_SHOULDBECHART);
-#if USING_GCC_2_96 || __GNUC__ == 3
+#if USING_GCC_2_96 || __GNUC__ == 3 || __SGE_INSURE__
       cp->operand.cmp.val.c = va_arg(*app, int);
 #else
       cp->operand.cmp.val.c = va_arg(*app, lChar);
@@ -849,7 +849,7 @@ static lCondition *read_val(lDescr *dp, cull_parse_state *state, va_list *app)
    case BOOL:
       if (mt_get_type(cp->operand.cmp.mt) != lBoolT)
          incompatibleType(MSG_CULL_WHERE_SHOULDBEBOOL);
-#if USING_GCC_2_96 || __GNUC__ == 3
+#if USING_GCC_2_96 || __GNUC__ == 3 || __SGE_INSURE__
       cp->operand.cmp.val.b = va_arg(*app, int);
 #else
       cp->operand.cmp.val.b = va_arg(*app, lBool);
