@@ -1,3 +1,7 @@
+JG-2004-05-18-1: Bugfix:    fixed memory leaks in qmaster.
+                 Changed:   sge_qmaster
+                 Review:    SG
+
 SG-2004-05-18-1: Bugfix:    fixed memory leak in qmaster.
                  Changed:   sge_qmaster
                  Review:    JG
